[gd_scene load_steps=3 format=3 uid="uid://txjh3ufo5d4y"]

[ext_resource type="PackedScene" uid="uid://duj8nl0vpms35" path="res://addons/dialogic/Editor/Common/TLabel.tscn" id="1"]
[ext_resource type="Script" path="res://addons/dialogic/Events/Choice/ChoicesSettings.gd" id="2"]

[node name="Choices" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 506.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TLabel" parent="VBoxContainer" instance=ExtResource("1")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 506.0
offset_bottom = 26.0
text = "Choices"
mode = 1

[node name="Autofocus" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 30.0
offset_right = 506.0
offset_bottom = 56.0

[node name="TLabel" parent="VBoxContainer/Autofocus" instance=ExtResource("1")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 478.0
offset_bottom = 26.0
size_flags_horizontal = 3
text = "Autofocus first choice"
mode = 0

[node name="Autofocus" type="CheckBox" parent="VBoxContainer/Autofocus"]
unique_name_in_owner = true
offset_left = 482.0
offset_right = 506.0
offset_bottom = 26.0

[node name="Delay" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 60.0
offset_right = 506.0
offset_bottom = 91.0

[node name="TLabel" parent="VBoxContainer/Delay" instance=ExtResource("1")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 2.0
offset_right = 419.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Delay before choices can be pressed"
mode = 0

[node name="Delay" type="SpinBox" parent="VBoxContainer/Delay"]
unique_name_in_owner = true
offset_left = 423.0
offset_right = 506.0
offset_bottom = 31.0
step = 0.01

[node name="DefaultFalseBehaviour" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 95.0
offset_right = 506.0
offset_bottom = 126.0

[node name="TLabel" parent="VBoxContainer/DefaultFalseBehaviour" instance=ExtResource("1")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 2.0
offset_right = 423.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Default behaviour for false choices"
mode = 0

[node name="FalseBehaviour" type="OptionButton" parent="VBoxContainer/DefaultFalseBehaviour"]
unique_name_in_owner = true
offset_left = 427.0
offset_right = 506.0
offset_bottom = 31.0
item_count = 2
selected = 0
popup/item_0/text = "Hide"
popup/item_0/id = 0
popup/item_1/text = "Disable"
popup/item_1/id = 1

[node name="VSeparator" type="VSeparator" parent="."]
offset_left = 510.0
offset_right = 514.0
offset_bottom = 600.0

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
offset_left = 518.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="TLabel" parent="VBoxContainer2" instance=ExtResource("1")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_right = 506.0
offset_bottom = 26.0
text = "Choice hotkeys"
mode = 1

[node name="HotkeySelection" type="HBoxContainer" parent="VBoxContainer2"]
offset_top = 30.0
offset_right = 506.0
offset_bottom = 61.0

[node name="TLabel" parent="VBoxContainer2/HotkeySelection" instance=ExtResource("1")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 2.0
offset_right = 369.0
offset_bottom = 28.0
size_flags_horizontal = 3
text = "Hotkey type"
mode = 0

[node name="HotkeyType" type="OptionButton" parent="VBoxContainer2/HotkeySelection"]
unique_name_in_owner = true
offset_left = 373.0
offset_right = 506.0
offset_bottom = 31.0
item_count = 2
selected = 0
popup/item_0/text = "No Hotkeys"
popup/item_0/id = 0
popup/item_1/text = "Default (1-9)"
popup/item_1/id = 1

[node name="TLabel2" parent="VBoxContainer2" instance=ExtResource("1")]
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 65.0
offset_right = 506.0
offset_bottom = 117.0
text = "You can add more complex hotkeys by editing the \"shortcut\" property of a ChoiceButton. "
autowrap_mode = 3
mode = 2

[connection signal="toggled" from="VBoxContainer/Autofocus/Autofocus" to="." method="_on_Autofocus_toggled"]
[connection signal="value_changed" from="VBoxContainer/Delay/Delay" to="." method="_on_Delay_value_changed"]
[connection signal="item_selected" from="VBoxContainer/DefaultFalseBehaviour/FalseBehaviour" to="." method="_on_FalseBehaviour_item_selected"]
[connection signal="item_selected" from="VBoxContainer2/HotkeySelection/HotkeyType" to="." method="_on_HotkeyType_item_selected"]
